Add function to create grid layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
     
     <body>
-        <div class="container"></div>
+        <div class="container"> <!-- Create an outer container and set as flex container for centering inside elements -->
+            <button type="button">Generate</button>
+            <div class="sketchbox"></div>
+        </div>
     </body>
 </html>
